<resources>
    <string name="app_name">成橙Kits</string>
    <string name="name">姓名:</string>
    <string name="books">当前借阅</string>
    <string name="welcome">欢迎使用成大校园助手</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="load_more">点击加载更多</string>
    <string name="sign">登录</string>
    <string name="search">搜索</string>
    <string name="search_library">搜索图书</string>
    <string name="feedback">反馈(E-mail)</string>
    <string name="account">学号</string>
    <string name="library_password">图书馆密码</string>
    <string name="support">点击广告，支持开发者</string>
    <string name="help">帮助</string>
    <string name="sina">微博:</string>
    <string name="sina_link">http://weibo.com/00wifi</string>
    <string name="author">开发者:\@JiYang</string>
    <string name="library_info">图书借阅信息</string>
    <string name="education_info">教务管理系统</string>
    <string name="net_education_info">网络教学平台</string>
    <string name="announce_info">全校通知公告</string>
    <string name="library_sign_info">查询图书借阅等信息，请先绑定学号</string>
    <string name="home">首页</string>
    <string name="library">图书馆</string>
    <string name="feeds">发现</string>
    <string name="platform">平台</string>
    <string name="sign_library">登录图书馆</string>
    <string name="sign_education">登录教务系统</string>
    <string name="sign_net_education">登录网络教学平台</string>
    <string name="education">教学</string>
    <string name="my">我的</string>
    <string name="more">更多</string>
    <string name="feedback_info">留下你想说的哟!想加的功能，希望改善的功能都可以</string>
    <string name="contact">你的联系方式:电话/邮箱/QQ(选填)</string>
    <string name="renew">续借</string>
    <string name="net_connent_error">网络连接失败，点击重试</string>
    <string name="send_feedback">发送反馈</string>
    <string name="refresh">刷新</string>
    <string name="search_info">搜索图书</string>
    <string name="campus">校园</string>
    <string name="banner_ad_unit_id2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-1821932431592350/5572912621</string>
    <string name="nav_close">nav_close</string>
    <string name="nav_open">nav_open</string>
    <string name="card_number">证件号</string>
    <string name="ser_number">条码号</string>
    <string name="email">邮箱</string>
    <string name="book_date">借阅:%1$s</string>
    <string name="book_end_date">应还:%1$s</string>
    <string name="book_out_of_date">距离还书还有 %1$d 天</string>
    <string name="book_times">续借次数: %1$s 天</string>
    <string name="input_account">帐号</string>
    <string name="input_password">图书馆登录密码</string>
    <string name="booked_count">累计借书</string>
    <string name="book_max_count">最大可借</string>
    <string name="max_book_order_count">最大预约</string>
    <string name="max_book_illegal_count">违章次数</string>
    <string name="detail">详情</string>
    <string name="fav_book">图书收藏</string>
    <string name="go_login">图书馆鼓舞需要先登录，点击去登录</string>
    <string name="pref_category_general">基本</string>
    <string name="pref_title_library_user_info">图书馆用户</string>
    <string name="pref_log_out">登出</string>
    <string name="pref_login_library">登录图书馆</string>
    <string name="pull_refresh">下拉刷新</string>

    <string name="search_type">搜索类型</string>
    <string-array name="search_type">
        <item name="book_search_type_1">标题</item>
        <item name="book_search_type_2">作者</item>
        <item name="book_search_type_3">主题词</item>
        <item name="book_search_type_4">ISBN/ISSN</item>
        <item name="book_search_type_5">订购号</item>
        <item name="book_search_type_6">分类号</item>
        <item name="book_search_type_7">索书号</item>
        <item name="book_search_type_8">出版社</item>
        <item name="book_search_type_9">从书名</item>
    </string-array>

    <string name="search_match_type">匹配方式</string>
    <string-array name="search_match_type">
        <item>前方一致</item>
        <item>完全匹配</item>
        <item>任意匹配</item>
    </string-array>

    <string name="search_book_type">书籍类型</string>
    <string name="thanks_and_nice_meet">谢谢你的使用。Nice to meet you!</string>
    <string name="contact_me">为了更好，欢迎和我联系</string>
    <string name="comment">评价</string>
    <string name="referer">设计参考自 Github.com/Eajy/MaterialDesignDemo\nMade By Github.com/jiyangg</string>
    <string-array name="search_book_type">
        <item name="search_book_type_1">所有书刊</item>
        <item name="search_book_type_2">中文图书</item>
        <item name="search_book_type_3">西文图书</item>
        <item name="search_book_type_4">中文期刊</item>
        <item name="search_book_type_5">西文期刊</item>
    </string-array>

    <string name="source_code">源代码</string>
    <string name="my_site">我的网站</string>
    <string name="open_source">开源许可</string>
    <string name="about_email_intent">反馈:CDUKits(成橙Kits)</string>
    <string name="about_not_found_email">没找到邮箱App</string>
    <string name="share_with">分享到</string>
    <string name="wait">实现中…</string>
    <string name="pref_tab_list">选择要显示的Tab</string>
    <string name="sure">确定</string>
    <string name="sure_log_out_library">确定登出图书馆?</string>
    <string name="cancel">取消</string>
    <string name="net_platform_password">网络教务平台密码</string>
    <string name="open_by_browser">浏览器打开</string>
    <string name="retry">重试</string>
    <string name="empty_data">无数据,下拉刷新</string>
    <string name="update">更新</string>
    <string name="new_version_update">新版本更新啦!</string>
    <string name="get">获取</string>
</resources>
