<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_drop_menu"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/pop_announce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_drop_menu_text"
        android:padding="5dp"
        android:text="@string/announce_info"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/pop_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_drop_menu_text"
        android:padding="5dp"
        android:text="@string/education_info"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/pop_net_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_drop_menu_text"
        android:padding="5dp"
        android:text="@string/net_education_info"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/pop_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_drop_menu_text"
        android:padding="5dp"
        android:text="@string/feedback"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/pop_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_drop_menu_text"
        android:padding="5dp"
        android:text="@string/help"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/pop_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_drop_menu_text"
        android:padding="5dp"
        android:text="@string/about"
        android:textColor="@color/primary_text" />

</LinearLayout>