<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_left_menu"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/app_icon"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/app_icon"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_user_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <RadioGroup
            android:id="@+id/radioGroup_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/menu_announce"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_announce"
                android:drawableStart="@mipmap/ic_announce"
                android:text="@string/announce_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/menu_library"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_book"
                android:drawableStart="@mipmap/ic_book"
                android:text="@string/library_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/menu_education"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_education"
                android:drawableStart="@mipmap/ic_education"
                android:text="@string/education_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/menu_net_education"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_net_education"
                android:drawableStart="@mipmap/ic_net_education"
                android:text="@string/net_education_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />


            <RadioButton
                android:id="@+id/menu_setting"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_setting"
                android:drawableStart="@mipmap/ic_setting"
                android:text="@string/setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/menu_feedback"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_feedback"
                android:drawableStart="@mipmap/ic_feedback"
                android:text="@string/feedback" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/menu_help"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_help"
                android:drawableStart="@mipmap/ic_help"
                android:text="@string/help" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/menu_about"
                style="@style/menu_text"
                android:drawableLeft="@mipmap/ic_about"
                android:drawableStart="@mipmap/ic_about"
                android:text="@string/about" />

        </RadioGroup>
    </LinearLayout>
</ScrollView>