<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/et_account"
        style="@style/sign_edit_text"
        android:hint="@string/account"
        android:inputType="phone" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <cn.youcute.library.diyView.XEditText
        android:id="@+id/et_password"
        style="@style/sign_edit_text"
        android:drawableEnd="@mipmap/icon_eye"
        android:drawableRight="@mipmap/icon_eye"
        android:hint="@string/library_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:text="请使用图书馆账户登录\n查看个人信息\n查看图书借阅信息\n到期信息\n方便快捷续借"
        android:textColor="#000" />

</LinearLayout>