<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="12">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_account"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/input_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btn_sign"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign"
        android:textSize="18sp" />
</LinearLayout>