<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp">

            <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/sign_library"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/cancelLogin"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="end|center_vertical"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/cancel"
                            android:scaleType="center"
                            android:src="@drawable/ic_cancel"
                            android:tint="@color/colorPrimary" />

                    </FrameLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="12">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_account"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/input_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <RadioGroup
                        android:id="@+id/loginLibraryUserTypeGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@id/loginByCard"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/loginByCard"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/card_number" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/loginBySerNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ser_number" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/loginByEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/email" />
                    </RadioGroup>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ProgressBar
                            android:id="@+id/progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="invisible" />

                        <Button
                            android:id="@+id/btnLoginLibrary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/login_btn"
                            android:minHeight="0dp"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/sign"
                            android:textColor="@color/white" />
                    </FrameLayout>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>

    </FrameLayout>
</layout>