<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="-成大图片相册-"
            android:textColor="@color/menu_text" />

        <com.sivin.Banner
            android:id="@+id/banner"
            android:layout_width="360dp"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tv_image_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/s_main_menu_text"
            android:drawableEnd="@mipmap/ic_search"
            android:drawableRight="@mipmap/ic_search"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="搜索校内图书/豆瓣图书"
            android:textColor="@color/menu_text"
            android:textSize="16sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_library"
                style="@style/style_main_menu_text"
                android:text="@string/library_info" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_announce"
                style="@style/style_main_menu_text"
                android:text="@string/announce_info" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_education"
                style="@style/style_main_menu_text"
                android:text="@string/education_info" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_net_education"
                style="@style/style_main_menu_text"
                android:text="@string/net_education_info" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <FrameLayout
            android:id="@+id/frame_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/window_bg" />
    </LinearLayout>

</ScrollView>

